# travel

./: AGENT_BRIEF.md  API_SCHEMA.md  BAAS_DECISION.md  CODESPACES_SETUP.md  COMPATIBILITY_CHECK_REPORT.md  COMPATIBILITY_CHECK_STAGES_0_5_FINAL.md  COMPATIBILITY_CHECK_STAGES_0_6_FINAL.md  COMPATIBILITY_REPORT.md  COMPATIBILITY_REPORT_ALL_STAGES.md  COMPATIBILITY_REPORT_ALL_STAGES_UPDATED.md  CONTENT_MANAGEMENT_GUIDE.md  CONTEXT.md  DATA_SCHEMA.md  DESIGN_TOKENS.md  DEVELOPER_GUIDE.md  DOWNLOAD_INSTRUCTIONS.md  FIREBASE_SETUP_GUIDE.md  FUNCTIONALITY_CHECKLIST.md  GITHUB_ACTIONS_GUIDE.md  IOS_SETUP.md  NEXT_STEPS.md  QUICK_START.md  README.md  SPM_DEPENDENCIES.md  STAGE_2_COMPLETION.md  STAGE_2_FINAL_REPORT.md  STAGE_3_5_COMPLETION_REPORT.md  STAGE_3_COMPLETION.md  STAGE_3_VERIFICATION_REPORT.md  STAGE_4_COMPLETION_REPORT.md  STAGE_5_COMPLETION_REPORT.md  STAGE_5_COMPLETION_REPORT_UPDATED.md  STAGE_6_COMPLETION_REPORT.md  STAGE_6_IMPLEMENTATION_PLAN.md  STAGE_7_COMPLETION_REPORT.md  STAGE_7_IMPLEMENTATION_PLAN.md  TECHNICAL_SPECIFICATION.md  UI_DEVELOPMENT_GUIDE.md  XCODE_LAUNCH_GUIDE.md  XCODE_SETUP_GUIDE.md  (+3 more)
SaranskTourist/: .gitignore  (+2 more)
saransk-backend/: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
saransk-backend/alembic/: env.py
saransk-backend/alembic/versions/: bb9146a546a8_initial_migration.py
saransk-backend/app/: main.py
saransk-backend/app/api/: __init__.py  places.py  reviews.py
saransk-backend/app/core/: config.py  db.py
saransk-backend/app/models/: __init__.py  base.py  place.py  review.py  route.py  user.py
(+83 files in other folders)
