[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saransk-backend"
version = "0.1.0"
description = "Backend for 'Saransk for Tourists'"
authors = [{name = "Tour App", email = "dev@example.com"}]
requires-python = ">=3.10"
dependencies = [
  "fastapi==0.115.0",
  "uvicorn[standard]==0.30.6",
  "pydantic==2.8.2",
  "pydantic-settings==2.4.0",
  "SQLAlchemy==2.0.32",
  "psycopg[binary]==3.2.3",
  "alembic==1.13.2",
  "python-jose[cryptography]==3.3.0",
  "passlib[bcrypt]==1.7.4",
  "email-validator==2.2.0",
  "redis==5.0.7",
  "aioboto3==13.1.1",
  "httpx==0.27.0",
  "structlog==24.1.0",
  "orjson==3.10.7",
  "tenacity==9.0.0"
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.packages.find]
where = ["app"]

